# redfish-mcp-server

./: README.md  __init__.py  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/plans/: 2026-02-25-client-security-design.md  2026-02-27-client-security-implementation.md
examples/: mcp_config.md
src/redfish_mcp_server/: __init__.py  main.py
src/redfish_mcp_server/client/: __init__.py  redfish_client.py
src/redfish_mcp_server/config/: __init__.py  models.py
src/redfish_mcp_server/tools/: __init__.py  management.py  monitoring.py  power.py  system.py
src/redfish_mcp_server/utils/: __init__.py  exceptions.py
tests/: test_main.py
